test sur notebook

--- a/Modelisation 0D.ipynb
+++ b/Modelisation 0D.ipynb
@@ -121,11 +121,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Bilan d'énergie couche par couche\n",
+    "# Bilan d'énergie couche par couche\n",
     "## Notations\n",
     "\n",
-    "**C<sub>i</sub>**= capacité calorifique massique de la couche i (J/m<sup>3</sup>.K\\\n",
-    "**h<sub>i</sub>** = épaisseur de la couche i (m) \\\n",
+    "\n",
+    "Notation|description|unité\n",
+    "--|--|--\n",
+    "$C_i$ |capacité calorifique massique de la couche i | $\\frac{J}{m^3.K}$\n",
+    "\n",
+    "$h_i$ | épaisseur de la couche i (m) \\\n",
     "**T<sub>i</sub>** = Température de la couche i (°C)\\\n",
     "**T<sub>e</sub>** = Température d'entrée ou d'injection du fluide(°C) \\\n",
     "**T<sub>s</sub>** = Température de sortie du fluide(°C) \\\n",
@@ -140,7 +144,7 @@
     "\\end{equation}\n",
     "\n",
     "\n",
-    "### Couche de surface\n",
+    "## Couche de surface\n",
     "\n",
     "\\begin{equation}\n",
     "C_s h_s\\frac{dT_s}{dt}=(1-\\alpha)R_g+ R_{atm} -\\epsilon\\sigma T^{4}-H_v(T_s-T_ext)-r_{s/d}(T_s-T_d)\n",
@@ -223,7 +227,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
