--- a/Modelisation 0D.ipynb
+++ b/Modelisation 0D.ipynb
@@ -7,15 +7,15 @@
     "# Modélisation dromotherm 0D\n",
     "## auteurs: \n",
     "+ **Benoit STUTZ,Professeur**, LOCIE (Université Savoie Mont-Blanc,France) \n",
-    "+ **Frédédric BERNARDIN**, Chercheur, Adjoint Département Mobilité Durable et Sécurité du CEREMA Centre-Est\n",
-    "+ **Alexandre CUER**, Directeur Adjoint CEREMA Centre-Est \n",
-    "+ **Fébron SEVI**, Stagaire au LOCIE \n",
+    "+ **Frédédric BERNARDIN**, Chercheur HDR, chef d'unité adjoint Mobilité Durable et Sécurité / Cerema Clermont-Ferrand\n",
+    "+ **Alexandre CUER**, Directeur Adjoint / Cerema Clermont-Ferrand\n",
+    "+ **Fébron SEVI**, Stagiaire master au LOCIE \n",
     "---\n",
-    "A travers ce notebook, nous allons décrire une modélisation 0D d'un échangeur thermique routier développé dans le cadre du proet DROMOTHERM.\n",
+    "A travers ce notebook, nous allons décrire une modélisation 0D d'un échangeur thermique routier développé dans le cadre du projet DROMOTHERM.\n",
     "Un échangeur routier dromotherm est une chaussée constituée de trois couches : \n",
-    "+ Une couche de roulement ou de surface d'une épaisseur h<sub>s</sub>\n",
-    "+ Une couche drainante poreuse d'une épaisseur h<sub>d</sub>\n",
-    "+ Une couche de base d'une épaisseur h<sub>b</sub>\n",
+    "+ Une couche de roulement ou de surface d'une épaisseur $h_s$\n",
+    "+ Une couche drainante poreuse d'une épaisseur $h_d$\n",
+    "+ Une couche de base d'une épaisseur $h_b$\n",
     "\n",
     "\n",
     " \n"
@@ -127,18 +127,18 @@
     "\n",
     "Notation|description|unité\n",
     "--|--|--\n",
-    "$C_i$ |capacité calorifique massique de la couche i | $\\frac{J}{m^3.K}$\n",
+    "$C_i$ | Capacité calorifique massique de la couche i | $\\frac{J}{m^3.K}$\n",
+    "$h_i$ | Epaisseur de la couche i | m\n",
+    "$T_i$ | Température de la couche i | °C\n",
+    "$T_e$ | Température d'entrée ou d'injection du fluide | °C\n",
+    "$T_s$ | Température de sortie du fluide | °C\n",
+    "$\\alpha$ | albédo |\n",
+    "$\\sigma$ | constante de Stefan-Boltzmann $5,67.10^{-7}$ |$\\frac{W}{m^2K^4}$\n",
+    "$\\dot{m_f}$ | débit massique du fluide | $\\frac{kg}{s}$\n",
+    "$k_i$ | conductivité thermique de la couche i | $\\frac{W}{mK}$\n",
+    "$r_{i/l}$ | coefficient d'échange surfacique entre les couches i et j | $\\frac{W}{m^2K}$\n",
+    "$h$ | coefficient d'echange convectif entre le fluide et la couche drainante | $\\frac{W}{m^2K}$\n",
     "\n",
-    "$h_i$ | épaisseur de la couche i (m) \\\n",
-    "**T<sub>i</sub>** = Température de la couche i (°C)\\\n",
-    "**T<sub>e</sub>** = Température d'entrée ou d'injection du fluide(°C) \\\n",
-    "**T<sub>s</sub>** = Température de sortie du fluide(°C) \\\n",
-    "$\\alpha$ = albédo \\\n",
-    "$\\sigma$ = constante de Stefan-Boltzmann ( 5,67.10<sup>-7</sup> W/m<sup>2</sup>K<sup>4</sup>) \\\n",
-    "$\\dot{m_f}$= débit massique du fluide (kg/s) \\\n",
-    "**k<sub>i</sub>**= conductivité thermique de la couche i (W/m.K) \\\n",
-    "**r<sub>i/l</sub>**= coefficient d'échange surfacique entre les couches i et j (W/m<sup>2</sup>.K)\\\n",
-    "**h** =  coeffiient d'echange convectif entre le fluide et la couche drainante (W/m<sup>2</sup>.K)\n",
     "\\begin{equation}\n",
     "r_{i/j}=\\frac{2k_i k_j}{h_i k_j+h_j k_i} \n",
     "\\end{equation}\n",
