--- a/Modelisation 0D.ipynb
+++ b/Modelisation 0D.ipynb
@@ -100,9 +100,9 @@
     "\\Delta TLM= \\frac{T_s - T_e}{\\ ln \\frac{T_s-T_d}{T_e-T_d} }\n",
     "\\end{equation}\n",
     "\n",
-    "La résolution de ce système d'équations différentielles grâce à un code Python nous a permis de tracer les différents profil de températures.\\\n",
-    "Les données météos utilisées sont celles issues d'une station météorologique de\u000b",
-    "l'autoroute A75, station de Saint-Flour pour l'été 2010. Il s'agit de:\n",
+    "La résolution de ce système d'équations différentielles grâce à un code Python nous a permis de tracer les différents profil de températures.\n",
+    "\n",
+    "Les données météos utilisées sont celles issues de la ststation météorologique de l'autoroute A75, station de Saint-Flour pour l'été 2010. Il s'agit de:\n",
     "* La température de l'air (mettre de le code qui affiche la température de l'air)\n",
     "* La vitesse du vent\n",
     "* Le rayonnement solaire incident global \n",
