--- a/Modelisation 0D.ipynb
+++ b/Modelisation 0D.ipynb
@@ -63,7 +63,7 @@
     "$\\sigma$ | constante de Stefan-Boltzmann $5,67.10^{-7}$ |$\\frac{W}{m^2K^4}$\n",
     "$\\dot{m_f}$ | débit massique du fluide | $\\frac{kg}{s}$\n",
     "$k_i$ | conductivité thermique de la couche i | $\\frac{W}{mK}$\n",
-    "$r_{i/l}$ | coefficient d'échange surfacique entre les couches i et j | $\\frac{W}{m^2K}$\n",
+    "$r_{i/j}$ | coefficient d'échange surfacique entre les couches i et j | $\\frac{W}{m^2K}$\n",
     "$h$ | coefficient d'echange convectif entre le fluide et la couche drainante | $\\frac{W}{m^2K}$\n",
     "\n",
     "\\begin{equation}\n",
@@ -102,7 +102,7 @@
     "\n",
     "La résolution de ce système d'équations différentielles grâce à un code Python nous a permis de tracer les différents profil de températures.\n",
     "\n",
-    "Les données météos utilisées sont celles issues de la ststation météorologique de l'autoroute A75, station de Saint-Flour pour l'été 2010. Il s'agit de:\n",
+    "Les données météos utilisées sont celles issues de la station météorologique de Saint-Flour sur l'autoroute A75, pour l'été 2010. Il s'agit de:\n",
     "* La température de l'air (mettre de le code qui affiche la température de l'air)\n",
     "* La vitesse du vent\n",
     "* Le rayonnement solaire incident global \n",
