--- a/Modelisation 0D.ipynb
+++ b/Modelisation 0D.ipynb
@@ -57,8 +57,8 @@
     "$C_i$ | Capacité calorifique massique de la couche i | $\\frac{J}{m^3.K}$\n",
     "$h_i$ | Epaisseur de la couche i | m\n",
     "$T_i$ | Température de la couche i | °C\n",
-    "$T_e$ | Température d'entrée ou d'injection du fluide | °C\n",
-    "$T_s$ | Température de sortie du fluide | °C\n",
+    "$T_{injection}$ | Température d'entrée ou d'injection du fluide | °C\n",
+    "$T_{sortie}$ | Température de sortie du fluide | °C\n",
     "$\\alpha$ | albédo |\n",
     "$\\sigma$ | constante de Stefan-Boltzmann $5,67.10^{-8}$ |$\\frac{W}{m^2K^4}$\n",
     "$\\dot{m_f}$ | débit massique du fluide | $\\frac{kg}{s}$\n",
@@ -74,7 +74,7 @@
     "## Couche de surface\n",
     "\n",
     "\\begin{equation}\n",
-    "C_s h_s\\frac{dT_s}{dt}=(1-\\alpha)R_g+ R_{atm} -\\epsilon\\sigma T^{4}-H_v(T_s-T_ext)-r_{s/d}(T_s-T_d)\n",
+    "C_s h_s\\frac{dT_s}{dt}=(1-\\alpha)R_g+ R_{atm} -\\epsilon\\sigma T^{4}-H_v(T_s-T_{ext})-r_{s/d}(T_s-T_d)\n",
     "\\end{equation}\n",
     "\n",
     "## Couche drainante\n",
@@ -91,13 +91,49 @@
     "La couche de base est supposée adiabatique\n",
     "\n",
     "## Chaleur cédée au fluide par la chaussée par convection\n",
-    "\\begin{equation}\n",
-    "\\dot{m_f}(T_s-T_e)=hS\\Delta TLM\n",
-    "\\end{equation}\n",
-    "Avec \n",
+    "\n",
+    "Introduisons l'écart de température logarithmique de l'échangeur dromotherme\n",
     "\n",
     "\\begin{equation}\n",
-    "\\Delta TLM= \\frac{T_s - T_e}{\\ ln \\frac{T_s-T_d}{T_e-T_d} }\n",
+    "\\Delta TLM= \\frac{T_{sortie} - T_{injection}}{\\ln \\frac{T_{sortie}-T_d}{T_{injection}-T_d} }\n",
+    "\\end{equation}\n",
+    "\n",
+    "Notons $q_f$ le débit du fluide dans la couche drainante en $\\frac{m^3}{s}$\n",
+    "\n",
+    "Notons $C_f$ la capacité calorifique volumique du fluide en $\\frac{J}{m^3.K}$\n",
+    "\n",
+    "L'énergie $W$ récupérée par le fluide, exprimée en W, est : \n",
+    "\n",
+    "\\begin{equation}\n",
+    "W=q_f C_f (T_{sortie} - T_{injection})\n",
+    "\\end{equation}\n",
+    "\n",
+    "Notons $h$ le coefficient d'echange convectif entre le fluide et la couche drainante exprimé en $\\frac{W}{m^2K}$\n",
+    "\n",
+    "Notons $S$ la surface d'échange entre le fluide et les parois solides de la couche drainante.\n",
+    "\n",
+    "$W$ peut aussi s'exprimer de la manière suivante :\n",
+    "\n",
+    "\\begin{equation}\n",
+    "W=h S \\Delta TLM = h S \\frac{T_{sortie} - T_{injection}}{\\ ln \\frac{T_{sortie}-T_d}{T_{injection}-T_d} }\n",
+    "\\end{equation}\n",
+    "\n",
+    "On peut donc écrire :\n",
+    "\n",
+    "\\begin{equation}\n",
+    "h S \\frac{1}{\\ln \\frac{T_{sortie}-T_d}{T_{injection}-T_d} } = q_f C_f\n",
+    "\\end{equation}\n",
+    "\n",
+    "Soit :\n",
+    "\n",
+    "\\begin{equation}\n",
+    "\\frac{T_{sortie}-T_d}{T_{injection}-T_d} = \\exp^{\\frac{ h S}{q_f C_f}}\n",
+    "\\end{equation}\n",
+    "\n",
+    "Ce qui nous donne l'espression de la température de sortie :\n",
+    "\n",
+    "\\begin{equation}\n",
+    "T_{sortie} = T_d+(T_{injection}-T_d)\\exp^{\\frac{ h S}{q_f C_f}}\n",
     "\\end{equation}\n",
     "\n",
     "La résolution de ce système d'équations différentielles grâce à un code Python nous a permis de tracer les différents profil de températures.\n",
