--- a/Modelisation 0D.ipynb
+++ b/Modelisation 0D.ipynb
@@ -102,20 +102,20 @@
     "\n",
     "Notons $C_f$ la capacité calorifique volumique du fluide en $\\frac{J}{m^3.K}$\n",
     "\n",
-    "L'énergie $W$ récupérée par le fluide, exprimée en W, est : \n",
+    "L'énergie $E$ récupérée par le fluide, exprimée en W, est : \n",
     "\n",
     "\\begin{equation}\n",
-    "W=q_f C_f (T_{sortie} - T_{injection})\n",
+    "E=q_f C_f (T_{sortie} - T_{injection})\n",
     "\\end{equation}\n",
     "\n",
     "Notons $h$ le coefficient d'echange convectif entre le fluide et la couche drainante exprimé en $\\frac{W}{m^2K}$\n",
     "\n",
     "Notons $S$ la surface d'échange entre le fluide et les parois solides de la couche drainante.\n",
     "\n",
-    "$W$ peut aussi s'exprimer de la manière suivante :\n",
+    "$E$ peut aussi s'exprimer de la manière suivante :\n",
     "\n",
     "\\begin{equation}\n",
-    "W=h S \\Delta TLM = h S \\frac{T_{sortie} - T_{injection}}{\\ ln \\frac{T_{sortie}-T_d}{T_{injection}-T_d} }\n",
+    "E=h S \\Delta TLM = h S \\frac{T_{sortie} - T_{injection}}{\\ ln \\frac{T_{sortie}-T_d}{T_{injection}-T_d} }\n",
     "\\end{equation}\n",
     "\n",
     "On peut donc écrire :\n",
