--- a/Modelisation 0D.ipynb
+++ b/Modelisation 0D.ipynb
@@ -74,7 +74,7 @@
     "## Couche de surface\n",
     "\n",
     "\\begin{equation}\n",
-    "C_s h_s\\frac{dT_s}{dt}=(1-\\alpha)R_g+ R_{atm} -\\epsilon\\sigma T^{4}-H_v(T_s-T_{ext})-r_{s/d}(T_s-T_d)\n",
+    "C_s h_s\\frac{dT_s}{dt}=(1-\\alpha)R_g+ R_{atm} -\\epsilon\\sigma T_s^{4}-H_v(T_s-T_{ext})-r_{s/d}(T_s-T_d)\n",
     "\\end{equation}\n",
     "\n",
     "## Couche drainante\n",
