--- a/Modelisation 0D.ipynb
+++ b/Modelisation 0D.ipynb
@@ -54,7 +54,7 @@
     "\n",
     "Notation|description|unité\n",
     "--|--|--\n",
-    "$C_i$ | Capacité calorifique massique de la couche i | $\\frac{J}{m^3.K}$\n",
+    "$C_i$ | Capacité calorifique volumique de la couche i | $\\frac{J}{m^3.K}$\n",
     "$h_i$ | Epaisseur de la couche i | m\n",
     "$T_i$ | Température de la couche i | °C\n",
     "$T_{injection}$ | Température d'entrée ou d'injection du fluide | °C\n",
