--- a/Modelisation 0D.ipynb
+++ b/Modelisation 0D.ipynb
@@ -12,7 +12,7 @@
     "+ **Alexandre CUER**, Directeur Adjoint / Cerema Clermont-Ferrand\n",
     "+ **Fébron SEVI**, Stagiaire master au LOCIE \n",
     "---\n",
-    "A travers ce notebook, nous allons décrire une modélisation 0D d'un échangeur thermique routier développé dans le cadre du projet DROMOTHERM.\n",
+    "\n",
     "Un échangeur routier dromotherm est une chaussée constituée de trois couches : \n",
     "+ Une couche de roulement ou de surface d'une épaisseur $h_s$\n",
     "+ Une couche drainante poreuse d'une épaisseur $h_d$\n",
@@ -59,11 +59,13 @@
     "$T_i$ | Température de la couche i | °C\n",
     "$T_{injection}$ | Température d'entrée ou d'injection du fluide | °C\n",
     "$T_{sortie}$ | Température de sortie du fluide | °C\n",
-    "$\\alpha$ | albédo |\n",
+    "$\\alpha$ | albédo = 0.08 |\n",
+    "$\\epsilon$ | émissivité = 0.92|\n",
     "$\\sigma$ | constante de Stefan-Boltzmann $5,67.10^{-8}$ |$\\frac{W}{m^2K^4}$\n",
-    "$\\dot{m_f}$ | débit massique du fluide | $\\frac{kg}{s}$\n",
+    "$q_f$ ou $\\dot V_f$ | débit volumique du fluide | $\\frac{m^3}{s}$\n",
     "$k_i$ | conductivité thermique de la couche i | $\\frac{W}{mK}$\n",
     "$r_{i/j}$ | coefficient d'échange surfacique entre les couches i et j | $\\frac{W}{m^2K}$\n",
+    "$H_v$ | coefficient d'échange convectif entre la couche de surface et l'air (fonction affine de la vitesse du vent) <br>$H_v=5.8 + 4.1V_{vent}$ , avec $V_{vent}$ exprimée en m/s | $\\frac{W}{m^2K}$\n",
     "$h$ | coefficient d'echange convectif entre le fluide et la couche drainante | $\\frac{W}{m^2K}$\n",
     "\n",
     "\\begin{equation}\n",
