--- a/Modelisation 0D.ipynb
+++ b/Modelisation 0D.ipynb
@@ -62,16 +62,23 @@
     "$\\alpha$ | albédo = 0.08 |\n",
     "$\\epsilon$ | émissivité = 0.92|\n",
     "$\\sigma$ | constante de Stefan-Boltzmann $5,67.10^{-8}$ |$\\frac{W}{m^2K^4}$\n",
-    "$q_f$ ou $\\dot V_f$ | débit volumique du fluide | $\\frac{m^3}{s}$\n",
+    "$q_f$ | débit volumique du fluide | $\\frac{m^3}{s}$\n",
     "$k_i$ | conductivité thermique de la couche i | $\\frac{W}{mK}$\n",
     "$r_{i/j}$ | coefficient d'échange surfacique entre les couches i et j | $\\frac{W}{m^2K}$\n",
-    "$H_v$ | coefficient d'échange convectif entre la couche de surface et l'air (fonction affine de la vitesse du vent) <br>$H_v=5.8 + 4.1V_{vent}$ , avec $V_{vent}$ exprimée en m/s | $\\frac{W}{m^2K}$\n",
+    "$H_v$ | coefficient d'échange convectif entre la couche de surface et l'air | $\\frac{W}{m^2K}$\n",
     "$h$ | coefficient d'echange convectif entre le fluide et la couche drainante | $\\frac{W}{m^2K}$\n",
+    "\n",
+    "On peut écrire : \n",
     "\n",
     "\\begin{equation}\n",
     "r_{i/j}=\\frac{2k_i k_j}{h_i k_j+h_j k_i} \n",
     "\\end{equation}\n",
     "\n",
+    "On peut approximer $H_v$ par une fonction affine de la vitesse du vent, notée $V_{vent}$ exprimée en m/s :\n",
+    "\n",
+    "\\begin{equation}\n",
+    "H_v=5.8 + 4.1V_{vent}\n",
+    "\\end{equation}\n",
     "\n",
     "## Couche de surface\n",
     "\n",
@@ -82,17 +89,19 @@
     "## Couche drainante\n",
     "\n",
     "\\begin{equation}\n",
-    "C_d h_d\\frac{dT_d}{dt}=r_{s/d}(T_s-T_d)-r_{d/b}(T_d-T_b)-\\dot{m_f}(T_s-T_e)\n",
+    "C_d h_d\\frac{dT_d}{dt}=r_{s/d}(T_s-T_d)-r_{d/b}(T_d-T_b)-q_f C_f (T_{sortie}-T_{injection})\n",
     "\\end{equation}\n",
     "\n",
     "## Couche de base\n",
     "\n",
+    "La couche de base est supposée adiabatique :\n",
+    "\n",
     "\\begin{equation}\n",
     "C_b h_b\\frac{dT_b}{dt}=r_{d/b}(T_d-T_b)\n",
     "\\end{equation}\n",
-    "La couche de base est supposée adiabatique\n",
     "\n",
-    "## Chaleur cédée au fluide par la chaussée par convection\n",
+    "\n",
+    "## Température de sortie du fluide\n",
     "\n",
     "Introduisons l'écart de température logarithmique de l'échangeur dromotherme\n",
     "\n",
