--- a/Modelisation 0D.ipynb
+++ b/Modelisation 0D.ipynb
@@ -67,6 +67,7 @@
     "$r_{i/j}$ | coefficient d'échange surfacique entre les couches i et j | $\\frac{W}{m^2K}$\n",
     "$H_v$ | coefficient d'échange convectif entre la couche de surface et l'air | $\\frac{W}{m^2K}$\n",
     "$h$ | coefficient d'echange convectif entre le fluide et la couche drainante | $\\frac{W}{m^2K}$\n",
+    "$L$ | largeur de la chaussée | m\n",
     "\n",
     "On peut écrire : \n",
     "\n",
@@ -80,6 +81,8 @@
     "H_v=5.8 + 4.1V_{vent}\n",
     "\\end{equation}\n",
     "\n",
+    "Toutes les formules ci-après s'entendent en $\\frac{W}{m_2}$. Il s'agit d'équilibres énergétiques par $m^2$ de surface horizontale de chaussée. \n",
+    "\n",
     "## Couche de surface\n",
     "\n",
     "\\begin{equation}\n",
@@ -89,7 +92,7 @@
     "## Couche drainante\n",
     "\n",
     "\\begin{equation}\n",
-    "C_d h_d\\frac{dT_d}{dt}=r_{s/d}(T_s-T_d)-r_{d/b}(T_d-T_b)-q_f C_f (T_{sortie}-T_{injection})\n",
+    "C_d h_d\\frac{dT_d}{dt}=r_{s/d}(T_s-T_d)-r_{d/b}(T_d-T_b)- \\frac{q_f C_f (T_{sortie}-T_{injection})}{L * 1}\n",
     "\\end{equation}\n",
     "\n",
     "## Couche de base\n",
