corrections on notebook0D

--- a/Modelisation 0D.ipynb
+++ b/Modelisation 0D.ipynb
@@ -81,7 +81,7 @@
     "H_v=5.8 + 4.1V_{vent}\n",
     "\\end{equation}\n",
     "\n",
-    "Toutes les formules ci-après s'entendent en $\\frac{W}{m_2}$. Il s'agit d'équilibres énergétiques par $m^2$ de surface horizontale de chaussée. \n",
+    "Toutes les formules ci-après s'entendent pour une surface de chaussée de 1 mètre dans le profil en long fois L mètres dans le profil en travers. \n",
     "\n",
     "## Couche de surface\n",
     "\n",
@@ -92,7 +92,7 @@
     "## Couche drainante\n",
     "\n",
     "\\begin{equation}\n",
-    "C_d h_d\\frac{dT_d}{dt}=r_{s/d}(T_s-T_d)-r_{d/b}(T_d-T_b)- \\frac{q_f C_f (T_{sortie}-T_{injection})}{L * 1}\n",
+    "C_d h_d\\frac{dT_d}{dt}=r_{s/d}(T_s-T_d)-r_{d/b}(T_d-T_b)- \\frac{q_f C_f (T_{sortie}-T_{injection})}{L}\n",
     "\\end{equation}\n",
     "\n",
     "## Couche de base\n",
@@ -106,57 +106,57 @@
     "\n",
     "## Température de sortie du fluide\n",
     "\n",
-    "Introduisons l'écart de température logarithmique de l'échangeur dromotherme\n",
-    "\n",
-    "\\begin{equation}\n",
-    "\\Delta TLM= \\frac{T_{sortie} - T_{injection}}{\\ln \\frac{T_{sortie}-T_d}{T_{injection}-T_d} }\n",
-    "\\end{equation}\n",
+    "Notons $d\\phi$ le flux de chaleur gagné par le fluide au sein d'un volume élémentaire de l'échangeur, de section $dS$ et de longueur $dx$\n",
     "\n",
     "Notons $q_f$ le débit du fluide dans la couche drainante en $\\frac{m^3}{s}$\n",
     "\n",
     "Notons $C_f$ la capacité calorifique volumique du fluide en $\\frac{J}{m^3.K}$\n",
     "\n",
-    "L'énergie $E$ récupérée par le fluide, exprimée en W, est : \n",
-    "\n",
-    "\\begin{equation}\n",
-    "E=q_f C_f (T_{sortie} - T_{injection})\n",
-    "\\end{equation}\n",
-    "\n",
     "Notons $h$ le coefficient d'echange convectif entre le fluide et la couche drainante exprimé en $\\frac{W}{m^2K}$\n",
     "\n",
-    "Notons $S$ la surface d'échange entre le fluide et les parois solides de la couche drainante.\n",
+    "On suppose que la température de la couche drainante ne varie pas et on note $T_f$ la température au sien du fluide.\n",
     "\n",
-    "$E$ peut aussi s'exprimer de la manière suivante :\n",
-    "\n",
-    "\\begin{equation}\n",
-    "E=h S \\Delta TLM = h S \\frac{T_{sortie} - T_{injection}}{\\ ln \\frac{T_{sortie}-T_d}{T_{injection}-T_d} }\n",
-    "\\end{equation}\n",
-    "\n",
-    "On peut donc écrire :\n",
+    "On a :\n",
     "\n",
     "\\begin{equation}\n",
-    "h S \\frac{1}{\\ln \\frac{T_{sortie}-T_d}{T_{injection}-T_d} } = q_f C_f\n",
+    "d\\phi = q_f C_f (T_f(x+dx) - T_f(x))=q_f C_f dT_f = h (T_d - T_f)dS\n",
     "\\end{equation}\n",
     "\n",
-    "Soit :\n",
+    "Ou encore : \n",
     "\n",
     "\\begin{equation}\n",
-    "\\frac{T_{sortie}-T_d}{T_{injection}-T_d} = \\exp^{\\frac{ h S}{q_f C_f}}\n",
+    "dT_f = \\frac{d\\phi}{q_f C_f} =\\frac{h(Td-Tf)dS}{q_f C_f}\n",
     "\\end{equation}\n",
     "\n",
-    "Ce qui nous donne l'espression de la température de sortie :\n",
+    "Ce qui donne :\n",
     "\n",
     "\\begin{equation}\n",
-    "T_{sortie} = T_d+(T_{injection}-T_d)\\exp^{\\frac{ h S}{q_f C_f}}\n",
+    "\\frac{d(Td-T_f)}{T_d-T_f} =\\frac{-hdS}{q_f C_f}\n",
     "\\end{equation}\n",
     "\n",
-    "La résolution de ce système d'équations différentielles grâce à un code Python nous a permis de tracer les différents profil de températures.\n",
+    "On parle d'écart de température logarithmique de l'échangeur. En intégrant, on obtient :\n",
     "\n",
-    "Les données météos utilisées sont celles issues de la station météorologique de Saint-Flour sur l'autoroute A75, pour l'été 2010. Il s'agit de:\n",
+    "\\begin{equation}\n",
+    "\\ln \\frac{T_{sortie}-T_d}{T_{injection}-T_d} = \\frac{-hS}{q_f C_f}\n",
+    "\\end{equation}\n",
+    "\n",
+    "Avec $S$ surface d'échange sur toute la longueur du profil en travers, exprimée en $m^2$.\n",
+    "\n",
+    "On en déduit l'expression de la température de sortie :\n",
+    "\n",
+    "\\begin{equation}\n",
+    "T_{sortie} = T_d+(T_{injection}-T_d)\\exp^{\\frac{ -h S}{q_f C_f}}\n",
+    "\\end{equation}\n",
+    "\n",
+    "# Modélisation sur un jeu de données\n",
+    "\n",
+    "Nous allons utiliser un jeu de données météo issues de la station météorologique de Saint-Flour sur l'autoroute A75, pour l'été 2010. Il s'agit de:\n",
     "* La température de l'air (mettre de le code qui affiche la température de l'air)\n",
     "* La vitesse du vent\n",
     "* Le rayonnement solaire incident global \n",
-    "* Le rayonnement atmosphérique"
+    "* Le rayonnement atmosphérique\n",
+    "\n",
+    "La résolution du système d'équations différentielles se fait gràce à une méthode de Runge-Kutta."
    ]
   },
   {
