--- a/Modelisation 0D.ipynb
+++ b/Modelisation 0D.ipynb
@@ -157,7 +157,7 @@
     "\n",
     "# Cas pratique\n",
     "\n",
-    "Nous allons utiliser un jeu de données météo issues de la station météorologique de Saint-Flour sur l'autoroute A75, pour l'été 2010. Ce jeu intègre notamment :\n",
+    "Nous allons utiliser un jeu de données météo provenant de la station météorologique de Saint-Flour sur l'autoroute A75, pour l'été 2010. Ce jeu intègre notamment :\n",
     "* La température de l'air\n",
     "* La vitesse du vent\n",
     "* Le rayonnement solaire incident global \n",
