--- a/Modelisation 0D.ipynb
+++ b/Modelisation 0D.ipynb
@@ -2,7 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Modélisation dromotherm 0D\n",
     "\n",
@@ -24,7 +28,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "Cette chaussée, grâce à la circulation de l'eau dans la couche poreuse, permet de récupérer de la chaleur en été et de chauffer la chaussée en hiver.\n",
     "\n",
@@ -33,7 +41,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "Pour quantifier l'énergie récupérable dans la chaussée, nous allons décrire, sous formes d'équations, les différents phénomènes thermiques ayant lieu dans les différentes couches de la chaussée. Le procedé de transfert de chaleur comprend :\n",
     "- la conduction dans la chaussée,\n",
@@ -46,7 +58,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Bilan d'énergie couche par couche\n",
     "## Notations\n",
@@ -67,8 +83,17 @@
     "$r_{i/j}$ | coefficient d'échange surfacique entre les couches i et j | $\\frac{W}{m^2K}$\n",
     "$H_v$ | coefficient d'échange convectif entre la couche de surface et l'air | $\\frac{W}{m^2K}$\n",
     "$h$ | coefficient d'echange convectif entre le fluide et la couche drainante | $\\frac{W}{m^2K}$\n",
-    "$L$ | largeur de la chaussée | m\n",
-    "\n",
+    "$L$ | largeur de la chaussée | m\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "On peut écrire : \n",
     "\n",
     "\\begin{equation}\n",
@@ -79,8 +104,17 @@
     "\n",
     "\\begin{equation}\n",
     "H_v=5.8 + 4.1V_{vent}\n",
-    "\\end{equation}\n",
-    "\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "Toutes les formules ci-après s'entendent pour une surface de chaussée de 1 mètre dans le profil en long fois L mètres dans le profil en travers. \n",
     "\n",
     "## Couche de surface\n",
@@ -101,9 +135,17 @@
     "\n",
     "\\begin{equation}\n",
     "C_b h_b\\frac{dT_b}{dt}=r_{d/b}(T_d-T_b)\n",
-    "\\end{equation}\n",
-    "\n",
-    "\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "## Température de sortie du fluide\n",
     "\n",
     "Notons $d\\phi$ le flux de chaleur gagné par le fluide au sein d'un volume élémentaire de l'échangeur, de section $dS$ et de longueur $dx$\n",
@@ -126,8 +168,17 @@
     "\n",
     "\\begin{equation}\n",
     "dT_f = \\frac{d\\phi}{q_f C_f} =\\frac{h(Td-Tf)dS}{q_f C_f}\n",
-    "\\end{equation}\n",
-    "\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "Ce qui donne :\n",
     "\n",
     "\\begin{equation}\n",
@@ -140,8 +191,17 @@
     "\\ln \\frac{T_{sortie}-T_d}{T_{injection}-T_d} = \\frac{-hS}{q_f C_f}\n",
     "\\end{equation}\n",
     "\n",
-    "Avec $S$ surface d'échange sur toute la longueur du profil en travers, exprimée en $m^2$.\n",
-    "\n",
+    "Avec $S$ surface d'échange sur toute la longueur du profil en travers, exprimée en $m^2$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "On en déduit l'expression de la température de sortie :\n",
     "\n",
     "\\begin{equation}\n",
@@ -153,21 +213,34 @@
     "- de part la porosité de la couche drainante, la surface d'échange de l'échangeur est très importante, environ 100 fois la surface du dromotherme\n",
     "- le coefficient d'échange convectif entre le fluide et le drainant est aussi très élevé, probablement entre 1000 et 2000 $\\frac{W}{m^2K}$\n",
     "\n",
-    "En conséquence, cette méthode de modélisation de la température de sortie au sein du modèle 0D n'est pas très opérationnelle, elle revient en pratique à considérer la température du fluide égale à la température de la couche drainante\n",
-    "\n",
+    "En conséquence, cette méthode de modélisation de la température de sortie au sein du modèle 0D n'est pas très opérationnelle, elle revient en pratique à considérer la température du fluide égale à la température de la couche drainante"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "# Cas pratique\n",
     "\n",
     "Nous allons utiliser un jeu de données météo provenant de la station météorologique de Saint-Flour sur l'autoroute A75, pour l'été 2010. Ce jeu intègre notamment :\n",
     "* La température de l'air\n",
     "* La vitesse du vent\n",
     "* Le rayonnement solaire incident global \n",
-    "* Le rayonnement atmosphérique\n"
+    "* Le rayonnement atmosphérique"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -196,21 +269,17 @@
     "import numpy as np\n",
     "import matplotlib.pylab as plt\n",
     "\n",
-    "\"\"\"\n",
-    "col 0 : Température air (°C)\n",
-    "col 1 : Température point de rosée (°C)\n",
-    "col 2 : Nature des précipitations\n",
-    "col 3 : Vitesse du vent (m/s)\n",
-    "col 4 : Rayonnement global (W/m2)\n",
-    "col 5 : Rayonnement atmosphérique (W/m2)\n",
-    "\"\"\"\n",
     "fig = plt.figure(figsize=(20, 10))\n",
     "step, datas = getCsvDatas(\"meteo.csv\",dir=\"datas\",preview=True)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "La résolution du système d'équations différentielles se fait gràce à une méthode de Runge-Kutta.\n",
     "\n",
@@ -227,7 +296,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -251,7 +324,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "On crée une méthode pour calculer le coefficient d'échange surfacique entre 2 couches de chaussée et on construit la fonction F définissant le système d'équations différentielles. Tout est prêt pour lancer la résolution avec la fonction `solve_ivp` de scipy\n",
     "\n",
@@ -261,7 +338,11 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "def rd(k1,k2,h1,h2):\n",
@@ -293,7 +374,11 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "from scipy.integrate import solve_ivp\n",
@@ -308,7 +393,11 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -352,6 +441,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Aucun(e)",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
