--- a/Modelisation 0D.ipynb
+++ b/Modelisation 0D.ipynb
@@ -458,6 +458,10 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.5"
+  },
+  "rise": {
+   "backimage": "overlay.svg",
+   "scroll": true
   }
  },
  "nbformat": 4,
