--- a/Modelisation 0D.ipynb
+++ b/Modelisation 0D.ipynb
@@ -227,10 +227,12 @@
     "# Cas pratique\n",
     "\n",
     "Nous allons utiliser un jeu de données météo provenant de la station météorologique de Saint-Flour sur l'autoroute A75, pour l'été 2010. Ce jeu intègre notamment :\n",
-    "* La température de l'air\n",
-    "* La vitesse du vent\n",
-    "* Le rayonnement solaire incident global \n",
-    "* Le rayonnement atmosphérique"
+    "* Température air (°C) \t\n",
+    "* Température point de rosée (°C)\n",
+    "* Nature des précipitations\n",
+    "* Vitesse du vent (m/s)\n",
+    "* Rayonnement global (W/m2)\n",
+    "* Rayonnement atmosphérique (W/m2)"
    ]
   },
   {
@@ -457,7 +459,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.7"
   },
   "rise": {
    "backimage": "overlay.svg",
