--- a/01_couplage.ipynb
+++ b/01_couplage.ipynb
@@ -22,10 +22,7 @@
     "\n",
     "- $Cp_{sto}$ la capacité thermique du fluide circulant dans le système géothermique du stockage en $\\frac{J}{kg K}$\n",
     "\n",
-    "On pose : \n",
-    "\\begin{equation}\n",
-    "coeff = \\frac{m_{dro} * Cp_{dro}}{m_{sto} * Cp_{sto}}\n",
-    "\\end{equation}\n",
+    "On pose $coeff = \\frac{m_{dro} * Cp_{dro}}{m_{sto} * Cp_{sto}}$\n",
     "\n",
     "## Cas 1 : $coeff <= 1$\n",
     "\n",
