--- a/01_couplage.ipynb
+++ b/01_couplage.ipynb
@@ -88,10 +88,7 @@
     "T_{sor\\_sto} + coeff * eff * (T_{sor\\_dro} - T_{sor\\_sto}) = \\frac{k  y +  (m_{sto} * Cp_{sto} - \\frac{k}{2})  T_{sor\\_sto}}{m_{sto} * Cp_{sto} + \\frac{k}{2}}\n",
     "\\end{equation}\n",
     "\n",
-    "En posant : \n",
-    "\\begin{equation}\n",
-    "B = coeff * eff  * (m_{sto} * Cp_{sto} + \\frac{k}{2})\n",
-    "\\end{equation}\n",
+    "En posant $ B = coeff * eff  * (m_{sto} * Cp_{sto} + \\frac{k}{2})$\n",
     "\n",
     "On obtient :\n",
     "\n",
