--- a/01_couplage.ipynb
+++ b/01_couplage.ipynb
@@ -60,19 +60,19 @@
     "Si k est le coefficient du système énergétique exprimé en W/K, et en notant y la température dans le massif de stockage, on a :\n",
     "\n",
     "\\begin{equation}\n",
-    "m_{sto} * Cp_{sto} * (T_{inj\\_sto} - T_{sor\\_sto}) = k * (y - \\frac{T_{inj\\_sto} + T_{sor\\_sto}}{2})\n",
+    "m_{sto} * Cp_{sto} * (T_{inj\\_sto} - T_{sor\\_sto}) = k * (\\frac{T_{inj\\_sto} + T_{sor\\_sto}}{2} - y )\n",
     "\\end{equation}\n",
     "\n",
     "Soit :\n",
     "\n",
     "\\begin{equation}\n",
-    "T_{inj\\_sto}  (m_{sto} * Cp_{sto} + \\frac{k}{2})  =  k  y +  (m_{sto} * Cp_{sto} - \\frac{k}{2})  T_{sor\\_sto}\n",
+    "T_{inj\\_sto}  (m_{sto} * Cp_{sto} - \\frac{k}{2})  =  (m_{sto} * Cp_{sto} + \\frac{k}{2})  T_{sor\\_sto} - k y \n",
     "\\end{equation}\n",
     "\n",
     "Ou encore :\n",
     "\n",
     "\\begin{equation}\n",
-    "T_{inj\\_sto}  =  \\frac{k  y +  (m_{sto} * Cp_{sto} - \\frac{k}{2})  T_{sor\\_sto}}{m_{sto} * Cp_{sto} + \\frac{k}{2}}\n",
+    "T_{inj\\_sto}  =  \\frac{ (m_{sto} * Cp_{sto} + \\frac{k}{2})  T_{sor\\_sto} - k y }{m_{sto} * Cp_{sto} - \\frac{k}{2}}\n",
     "\\end{equation}"
    ]
   },
@@ -85,15 +85,15 @@
     "On obtient 2 expressions de $T_{inj\\_sto}$, permettant ainsi de formuler $T_{sor\\_sto}$ fonction de y et de $T_{sor\\_dro}$ seulement :\n",
     "\n",
     "\\begin{equation}\n",
-    "T_{sor\\_sto} + coeff * eff * (T_{sor\\_dro} - T_{sor\\_sto}) = \\frac{k  y +  (m_{sto} * Cp_{sto} - \\frac{k}{2})  T_{sor\\_sto}}{m_{sto} * Cp_{sto} + \\frac{k}{2}}\n",
+    "T_{sor\\_sto} + coeff * eff * (T_{sor\\_dro} - T_{sor\\_sto}) = \\frac{(m_{sto} * Cp_{sto} + \\frac{k}{2} )  T_{sor\\_sto} - k y} {m_{sto} * Cp_{sto} - \\frac{k}{2}}\n",
     "\\end{equation}\n",
     "\n",
-    "En posant $ B = coeff * eff  * (m_{sto} * Cp_{sto} + \\frac{k}{2})$\n",
+    "En posant $ B = coeff * eff  * (m_{sto} * Cp_{sto} - \\frac{k}{2})$\n",
     "\n",
     "On obtient :\n",
     "\n",
     "\\begin{equation}\n",
-    "(m_{sto} * Cp_{sto} + \\frac{k}{2})*T_{sor\\_sto} + B * (T_{sor\\_dro} - T_{sor\\_sto}) = k  y +  (m_{sto} * Cp_{sto} - \\frac{k}{2})  T_{sor\\_sto}\n",
+    "(m_{sto} * Cp_{sto} - \\frac{k}{2})*T_{sor\\_sto} + B * (T_{sor\\_dro} - T_{sor\\_sto}) =  (m_{sto} * Cp_{sto} + \\frac{k}{2})  T_{sor\\_sto} - k  y\n",
     "\\end{equation}"
    ]
   },
@@ -104,19 +104,19 @@
     "Soit :\n",
     "\n",
     "\\begin{equation}\n",
-    "(m_{sto} * Cp_{sto} + \\frac{k}{2} - B - m_{sto} * Cp_{sto} + \\frac{k}{2}) *  T_{sor\\_sto} = ky - B * T_{sor\\_dro}\n",
+    "(m_{sto} * Cp_{sto} - \\frac{k}{2} - B - m_{sto} * Cp_{sto} - \\frac{k}{2}) *  T_{sor\\_sto} = - B * T_{sor\\_dro} - k y\n",
     "\\end{equation}\n",
     "\n",
     "Ou encore : \n",
     "\n",
     "\\begin{equation}\n",
-    "( k - B ) *  T_{sor\\_sto} = ky - B * T_{sor\\_dro}\n",
+    "( k + B ) *  T_{sor\\_sto} = ky + B * T_{sor\\_dro}\n",
     "\\end{equation}\n",
     "\n",
-    "En posant $A = k -B$, il reste :\n",
+    "Il reste :\n",
     "\n",
     "\\begin{equation}\n",
-    "T_{sor\\_sto} = \\frac{ky - B * T_{sor\\_dro}}{A}\n",
+    "T_{sor\\_sto} = \\frac{ky + B * T_{sor\\_dro}}{k+B}\n",
     "\\end{equation}"
    ]
   },
