--- a/01_couplage.ipynb
+++ b/01_couplage.ipynb
@@ -121,6 +121,55 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Couplage avec la PAC\n",
+    "## Puissance géothermique\n",
+    "\n",
+    "On note :\n",
+    "\n",
+    "- $P_{géo}$ la puissance géothermique extraite en  W\n",
+    "- $Besoin_{bat}$ le besoin en chauffage du bâtiment en W\n",
+    "- $P_{élec}$ la puissance électrique de la ¨PAC en  W\n",
+    "- COP  le coefficient de performance de la PAC\n",
+    "\n",
+    "On a :\n",
+    "\\begin{equation}\n",
+    "Besoin_{ bat}=P_{élec}+ P_{géo}\n",
+    "\\end{equation}\n",
+    "Et\n",
+    "\\begin{equation}\n",
+    "COP=\\frac{Besoin_{ bat}}{P_{élec}}\n",
+    "\\end{equation}\n",
+    " De ces deux expressions, on obtient la relation entre la puissance géothermique et le besoin du bâtiment:\n",
+    " \\begin{equation}\n",
+    "P_{géo}=\\frac{COP-1}{COP}*Besoin_{ bat}\n",
+    "\\end{equation}\n",
+    "\n",
+    "La puissance géothermique s'exprime aussi comme suit:\n",
+    "\\begin{equation}\n",
+    "P_{géo}=m_{pac} Cp_{pac} (T_{inj_pac}-T_{sor_pac})\n",
+    "\\end{equation}\n",
+    "On en déduit la température de sortie du fluide dans la PAC:\n",
+    "\\begin{equation}\n",
+    "T_{sor\\_pac}=T_{inj\\_pac}- \\frac{P_{géo}}{m_{pac} Cp_{pac}}\n",
+    "\\end{equation}\n",
+    "\n",
+    " On procédant par analogie le bilan énergétique de l'échange entre en la PAC et le stockage à celui du dromotherm au stockage,on a :\n",
+    " \\begin{equation}\n",
+    "T_{inj\\_pac}  =  \\frac{ (m_{pac} * Cp_{pac} + \\frac{k}{2})  T_{sor\\_pac} - k y }{m_{pac} * Cp_{pac} - \\frac{k}{2}}\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -144,7 +193,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
