--- a/01_couplage.ipynb
+++ b/01_couplage.ipynb
@@ -156,9 +156,18 @@
     "T_{sor\\_pac}=T_{inj\\_pac}- \\frac{P_{géo}}{m_{pac} Cp_{pac}}\n",
     "\\end{equation}\n",
     "\n",
-    " On procédant par analogie le bilan énergétique de l'échange entre en la PAC et le stockage à celui du dromotherm au stockage,on a :\n",
+    " En procédant par analogie le bilan énergétique de l'échange entre en la PAC et le stockage à celui entre le dromotherm et stockage,on a :\n",
     " \\begin{equation}\n",
-    "T_{inj\\_pac}  =  \\frac{ (m_{pac} * Cp_{pac} + \\frac{k}{2})  T_{sor\\_pac} - k y }{m_{pac} * Cp_{pac} - \\frac{k}{2}}\n",
+    "T_{sor\\_pac}  =  \\frac{ (m_{pac} * Cp_{pac} + \\frac{k}{2})  T_{inj\\_pac} - k y }{m_{pac} * Cp_{pac} - \\frac{k}{2}}\n",
+    "\\end{equation}\n",
+    "\n",
+    "Les deux expressions de Tsor_pac nous permettent d'obtenir Tinj_pac :\n",
+    " \\begin{equation}\n",
+    "T_{inj\\_pac}  = y-\\frac{C Pgeo}{k}\n",
+    "\\end{equation}\n",
+    "avec\n",
+    " \\begin{equation}\n",
+    "C  = 1-\\frac{k}{2 m_{pac} Cp_{pac}}\n",
     "\\end{equation}"
    ]
   },
