--- a/01_couplage.ipynb
+++ b/01_couplage.ipynb
@@ -129,39 +129,39 @@
     "\n",
     "On note :\n",
     "\n",
-    "- $P_{géo}$ la puissance géothermique extraite en  W\n",
-    "- $Besoin_{bat}$ le besoin en chauffage du bâtiment en W\n",
-    "- $P_{élec}$ la puissance électrique de la ¨PAC en  W\n",
+    "- $P_{geo}$ la puissance géothermique extraite en  W\n",
+    "- $besoin$ le besoin en chauffage du bâtiment en W\n",
+    "- $P_{elec}$ la puissance électrique de la PAC en  W\n",
     "- COP  le coefficient de performance de la PAC\n",
     "\n",
     "On a :\n",
     "\\begin{equation}\n",
-    "Besoin_{ bat}=P_{élec}+ P_{géo}\n",
+    "besoin=P_{elec}+ P_{geo}\n",
     "\\end{equation}\n",
     "Et\n",
     "\\begin{equation}\n",
-    "COP=\\frac{Besoin_{ bat}}{P_{élec}}\n",
+    "COP=\\frac{besoin}{P_{elec}}\n",
     "\\end{equation}\n",
     " De ces deux expressions, on obtient la relation entre la puissance géothermique et le besoin du bâtiment:\n",
     " \\begin{equation}\n",
-    "P_{géo}=\\frac{COP-1}{COP}*Besoin_{ bat}\n",
+    "P_{geo}=\\frac{COP-1}{COP}*besoin\n",
     "\\end{equation}\n",
     "\n",
     "La puissance géothermique s'exprime aussi comme suit:\n",
     "\\begin{equation}\n",
-    "P_{géo}=m_{pac} Cp_{pac} (T_{inj_pac}-T_{sor_pac})\n",
+    "P_{geo}=m_{pac} Cp_{pac} (T_{inj\\_pac}-T_{sor\\_pac})\n",
     "\\end{equation}\n",
     "On en déduit la température de sortie du fluide dans la PAC:\n",
     "\\begin{equation}\n",
-    "T_{sor\\_pac}=T_{inj\\_pac}- \\frac{P_{géo}}{m_{pac} Cp_{pac}}\n",
+    "T_{sor\\_pac}=T_{inj\\_pac}- \\frac{P_{geo}}{m_{pac} Cp_{pac}}\n",
     "\\end{equation}\n",
     "\n",
-    " En procédant par analogie le bilan énergétique de l'échange entre en la PAC et le stockage à celui entre le dromotherm et stockage,on a :\n",
+    "En écrivant l'équilibre énergétique entre la PAC et le stockage, comme on a écrit celui entre le dromotherm et stockage, on a :\n",
     " \\begin{equation}\n",
     "T_{sor\\_pac}  =  \\frac{ (m_{pac} * Cp_{pac} + \\frac{k}{2})  T_{inj\\_pac} - k y }{m_{pac} * Cp_{pac} - \\frac{k}{2}}\n",
     "\\end{equation}\n",
     "\n",
-    "Les deux expressions de Tsor_pac nous permettent d'obtenir Tinj_pac :\n",
+    "Les deux expressions de $T_{sor\\_pac}$ nous permettent d'obtenir $T_{inj\\_pac}$ :\n",
     " \\begin{equation}\n",
     "T_{inj\\_pac}  = y-\\frac{C Pgeo}{k}\n",
     "\\end{equation}\n",
@@ -170,6 +170,13 @@
     "C  = 1-\\frac{k}{2 m_{pac} Cp_{pac}}\n",
     "\\end{equation}"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -195,7 +202,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
