--- a/01_couplage.ipynb
+++ b/01_couplage.ipynb
@@ -134,10 +134,8 @@
     "- $P_{elec}$ la puissance électrique de la PAC en  W\n",
     "- COP  le coefficient de performance de la PAC\n",
     "\n",
-    "On a :\n",
-    "\\begin{equation}\n",
-    "besoin=P_{elec} + P_{geo}\n",
-    "\\end{equation}\n",
+    "On a : $besoin = P_{elec} + P_{geo}$\n",
+    "\n",
     "Et\n",
     "\\begin{equation}\n",
     "COP=\\frac{besoin}{P_{elec}}\n",
