--- a/01_couplage.ipynb
+++ b/01_couplage.ipynb
@@ -147,10 +147,8 @@
     "P_{geo}=\\frac{COP-1}{COP} * besoin\n",
     "\\end{equation}\n",
     "\n",
-    "La puissance géothermique s'exprime aussi comme suit:\n",
-    "\\begin{equation}\n",
-    "P_{geo}=m_{pac} Cp_{pac} (T_{inj\\_pac}-T_{sor\\_pac})\n",
-    "\\end{equation}\n",
+    "La puissance géothermique s'exprime aussi : $P_{geo} = m_{pac} Cp_{pac} ( T_{inj\\_pac}-T_{sor\\_pac} )$\n",
+    "\n",
     "On en déduit la température de sortie du fluide dans la PAC:\n",
     "\\begin{equation}\n",
     "T_{sor\\_pac}=T_{inj\\_pac}- \\frac{P_{geo}}{m_{pac} Cp_{pac}}\n",
