--- a/01_couplage.ipynb
+++ b/01_couplage.ipynb
@@ -150,21 +150,25 @@
     "La puissance géothermique s'exprime aussi : $P_{geo} = m_{pac} Cp_{pac} ( T_{inj\\_pac}-T_{sor\\_pac} )$\n",
     "\n",
     "On en déduit la température de sortie du fluide dans la PAC:\n",
+    "\n",
     "\\begin{equation}\n",
-    "T_{sor\\_pac}=T_{inj\\_pac}- \\frac{P_{geo}}{m_{pac} Cp_{pac}}\n",
+    "T_{sor\\_pac} = T_{inj\\_pac} - \\frac{P_{geo}}{m_{pac} * Cp_{pac}}\n",
     "\\end{equation}\n",
     "\n",
     "En écrivant l'équilibre énergétique entre la PAC et le stockage, comme on a écrit celui entre le dromotherm et stockage, on a :\n",
-    " \\begin{equation}\n",
+    "\\begin{equation}\n",
     "T_{sor\\_pac}  =  \\frac{ (m_{pac} * Cp_{pac} + \\frac{k}{2})  T_{inj\\_pac} - k y }{m_{pac} * Cp_{pac} - \\frac{k}{2}}\n",
     "\\end{equation}\n",
     "\n",
     "Les deux expressions de $T_{sor\\_pac}$ nous permettent d'obtenir $T_{inj\\_pac}$ :\n",
-    " \\begin{equation}\n",
+    "\n",
+    "\\begin{equation}\n",
     "T_{inj\\_pac}  = y-\\frac{C Pgeo}{k}\n",
     "\\end{equation}\n",
+    "\n",
     "avec\n",
-    " \\begin{equation}\n",
+    "\n",
+    "\\begin{equation}\n",
     "C  = 1-\\frac{k}{2 m_{pac} Cp_{pac}}\n",
     "\\end{equation}"
    ]
